Fixed some issues on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,6 +145,11 @@ button:focus {
     width: 45px;
     display: inline;
 }
+.disclaimer {
+    text-align: right;
+    margin-right: 10px;
+    margin-top: 8px;
+}
 .hidden {
     display: none;
 }
